--- a/css/styles.css
+++ b/css/styles.css
@@ -531,4 +531,284 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #31d0aa;
 }
 
+.footer-container-footer{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    width: 453px;
+    height: 80px;
+    margin-left:auto;
+    box-sizing: border-box;
+    border: #4d5ae5;
 
+    
+}
+.footer-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    color: #fff;
+    
+}
+
+.footer-label{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+  
+    
+}
+
+.footer-input{
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+}
+.footer-input:focus{
+    border-color: #404bbf;
+}
+
+.footer-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    border: none;
+    margin-right: auto;
+    gap: 16px;
+
+}
+.footer-btn-icon{
+    gap: 16px;
+}
+
+/* MODALCA */
+
+.backdrop{
+   position: fixed; 
+   top: 0;
+   left: 0;
+
+   width: 100%;
+   height: 100%;
+   background-color: rgb(46, 47, 66, 0.4);
+
+   opacity: 0;
+   visibility: hidden;
+   pointer-events: none;
+   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.backdrop.is-open{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal{
+   position: absolute; 
+   top: 50%;
+   left: 50%;
+   padding: 72px 24px 24px;
+
+   width: 408px;
+   min-height: 584px;
+   border-radius: 4px;
+   transform: translate(-50%, -50%);
+
+   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+   background: #fcfcfc;
+
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop:not(.is-open) .modal{
+    transform: translate(-50%, -50%) scale(1.5);
+}
+
+.modal-btn{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+
+    border: 1px solid #000;;
+    border-radius: 50px;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    color: #111111;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    
+}
+.modal-btn:hover,
+.modal-btn:focus{
+    color:#4d5ae5 ;
+}
+.modal-btn-icon{
+    fill: currentColor;
+}
+.modal-caption{
+    min-width: 360px;
+    margin-bottom: 16px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+.modal-form-field{
+    margin-bottom: 8px;
+}
+.modal-form-label{
+    display: block;
+    margin-bottom: 4px;
+}
+.modal-form-wrapper{
+    position: relative;
+}
+.modal-form-input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 11px 38px;
+    
+
+    outline: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+   
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.modal-form-input:focus{
+    border-color: #404bbf;
+}
+.modal-form-icon{
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: #111111;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.modal-form-input:focus + .modal-form-icon{
+    fill: #404bbf;
+
+}
+.text input{
+    padding: 48px 16px;
+}
+.modal-form-message{
+    resize: none;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    outline: transparent;
+    padding-top: 8px;
+    padding-left: 16px;
+
+    
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    
+}
+.modal-form-message:focus{
+    border-color: #404bbf;
+}
+.modal-form-message::placeholder{
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.form-agreement{
+   margin-bottom: 24px; 
+}
+.agreement-wrapper{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+    width: 360px;
+    height: 16px;
+   
+    border-radius: 4px;
+    
+    color:  #8e8f99;
+}
+.agreement-checkbox{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+    border-radius: 2px;
+    color: transparent;
+    cursor: pointer;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    
+}
+input[type='checkbox']:checked + .agreement-wrapper > .agreement-checkbox{
+    background-color: #404bbf;
+    color:#fff ;
+}
+.agreement-checkbox-icon{
+    fill: currentColor;
+}
+
+.agreement-link{
+    line-height: 1.3;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    text-decoration-thickness: auto;
+    text-underline-offset:auto;
+    text-underline-position: from-font;
+    color: #4d5ae5;
+
+}
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+    border-radius: 4px;
+    width: 169px;
+    height: 56px;
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 auto;
+    text-align: center;
+    padding: 16px 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+   
+}
+
+.btn-accent:focus{
+    fill: #404bbf;
+}
