--- a/css/styles.css
+++ b/css/styles.css
@@ -540,7 +540,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left:auto;
     box-sizing: border-box;
     border: #4d5ae5;
-
+    
     
 }
 .footer-form{
@@ -569,8 +569,10 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-input:focus{
+.footer-input:focus,
+.footer-input:hover{
     border-color: #404bbf;
 }
 
@@ -583,14 +585,19 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 8px 24px;
     width: 165px;
     height: 40px;
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     border: none;
     margin-right: auto;
     gap: 16px;
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .footer-btn-icon{
     gap: 16px;
+    fill: #fff;
+}
+.footer-btn:hover,
+.footer-btn:focus{
+    background-color: #404bbf;
 }
 
 /* MODALCA */
@@ -747,14 +754,12 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    margin-bottom: 24px; 
 }
 .agreement-wrapper{
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
     width: 360px;
     height: 16px;
-   
     border-radius: 4px;
-    
     color:  #8e8f99;
 }
 .agreement-checkbox{
@@ -809,6 +814,7 @@ input[type='checkbox']:checked + .agreement-wrapper > .agreement-checkbox{
    
 }
 
-.btn-accent:focus{
-    fill: #404bbf;
+.btn:hover,
+.btn:focus{
+    background-color: #404bbf;
 }
