--- a/css/styles.css
+++ b/css/styles.css
@@ -567,10 +567,15 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px;
     width: 264px;
     height: 40px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .footer-input:focus,
 .footer-input:hover{
     border-color: #404bbf;
@@ -583,8 +588,13 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
     border-radius: 4px;
     padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
+    font-family:"Roboto",sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     background-color: #4d5ae5;
     border: none;
     margin-right: auto;
@@ -592,6 +602,8 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .footer-btn-icon{
+    width: 24px;
+    height: 24px;
     gap: 16px;
     fill: #fff;
 }
@@ -650,28 +662,31 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 24px;
     right: 24px;
-
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0;
-
-    border: 1px solid #000;;
-    border-radius: 50px;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);;
+    border-radius: 50%;
     width: 24px;
     height: 24px;
+    border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: transparent;
     color: #111111;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
 }
 .modal-btn:hover,
 .modal-btn:focus{
-    color:#4d5ae5 ;
+    border: none;
+    background-color: #404bbf;
+    fill: #ffffff;
 }
 .modal-btn-icon{
-    fill: currentColor;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-caption{
     min-width: 360px;
@@ -685,11 +700,15 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #2e2f42;
 }
 .modal-form-field{
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 .modal-form-label{
     display: block;
     margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
 }
 .modal-form-wrapper{
     position: relative;
@@ -699,10 +718,10 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 40px;
     padding: 11px 38px;
-    
-
+   
     outline: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
+   
     border-radius: 4px;
    
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -715,13 +734,14 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 50%;
     left: 16px;
+    font-size: 12px;
     transform: translateY(-50%);
     fill: #111111;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .modal-form-input:focus + .modal-form-icon{
-    fill: #404bbf;
+    fill: #4d5ae5;
 
 }
 .text input{
@@ -734,17 +754,16 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 120px;
     outline: transparent;
-    padding-top: 8px;
-    padding-left: 16px;
-
-    
+    padding: 8px 16px;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-message:focus{
-    border-color: #404bbf;
+    border-color: #4d5ae5;
 }
 .modal-form-message::placeholder{
     color: rgba(46, 47, 66, 0.4);
@@ -773,13 +792,14 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
     
 }
 input[type='checkbox']:checked + .agreement-wrapper > .agreement-checkbox{
     background-color: #404bbf;
-    color:#fff ;
+    color:#F4F4FD ;
+    border: none;
 }
 .agreement-checkbox-icon{
     fill: currentColor;
@@ -796,13 +816,18 @@ input[type='checkbox']:checked + .agreement-wrapper > .agreement-checkbox{
 
 }
 .btn{
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     border: 1px solid #000;
     border-radius: 4px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
+    font-weight: 500;
+    line-height:1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    border: none;
     background-color: #4d5ae5;
     border-radius: 4px;
     cursor: pointer;
