--- a/css/styles.css
+++ b/css/styles.css
@@ -573,9 +573,12 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-left: 16px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
+    color: #ffffff;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.placeholder{
+    color:#ffffff;
+}
 .footer-input:focus,
 .footer-input:hover{
     border-color: #404bbf;
@@ -586,6 +589,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    color: #ffffff;
     border-radius: 4px;
     padding: 8px 24px;
     min-width: 165px;
@@ -604,7 +608,6 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-btn-icon{
     width: 24px;
     height: 24px;
-    gap: 16px;
     fill: #fff;
 }
 .footer-btn:hover,
@@ -672,10 +675,9 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 50%;
     width: 24px;
     height: 24px;
-    border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: transparent;
     color: #111111;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
 }
@@ -704,7 +706,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-label{
     display: block;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -723,12 +725,12 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid rgba(46, 47, 66, 0.4);
    
     border-radius: 4px;
-   
+    background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .modal-form-input:focus{
-    border-color: #404bbf;
+    border-color: #4d5ae5;
 }
 .modal-form-icon{
     position: absolute;
@@ -736,8 +738,8 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     left: 16px;
     font-size: 12px;
     transform: translateY(-50%);
-    fill: #111111;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+    transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .modal-form-input:focus + .modal-form-icon{
@@ -778,6 +780,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #8e8f99;
     width: 360px;
     height: 16px;
+    font-size: 12px;
     border-radius: 4px;
     color:  #8e8f99;
 }
