--- a/css/styles.css
+++ b/css/styles.css
@@ -602,12 +602,13 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
     border: none;
     margin-right: auto;
-    gap: 16px;
+   
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .footer-btn-icon{
     width: 24px;
     height: 24px;
+    margin-left: 16px;
     fill: #fff;
 }
 .footer-btn:hover,
@@ -676,7 +677,6 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 24px;
     height: 24px;
     background-color: transparent;
-    color: #111111;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
@@ -702,11 +702,11 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #2e2f42;
 }
 .modal-form-field{
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 .modal-form-label{
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -801,7 +801,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 input[type='checkbox']:checked + .agreement-wrapper > .agreement-checkbox{
     background-color: #404bbf;
-    color:#F4F4FD ;
+    fill:#F4F4FD ;
     border: none;
 }
 .agreement-checkbox-icon{
