--- a/css/styles.css
+++ b/css/styles.css
@@ -700,8 +700,8 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     color: #2e2f42;
 }
-.modal-form-field{
-    margin-bottom: 8px;
+.modal-form-field:not(:last-child){
+    margin-bottom: 16px;
 }
 .modal-form-label{
     display: block;
@@ -789,7 +789,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     align-items: center;
     margin-right: 8px;
     border-radius: 2px;
-    color: transparent;
+    color: #ffffff;
     cursor: pointer;
     width: 16px;
     height: 16px;
