--- a/css/styles.css
+++ b/css/styles.css
@@ -713,6 +713,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-wrapper{
     position: relative;
+    margin-bottom: 8px;
 }
 .modal-form-input{
     display: block;
