--- a/css/styles.css
+++ b/css/styles.css
@@ -646,7 +646,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    top: 50%;
    left: 50%;
    padding: 72px 24px 24px;
-
+  
    width: 408px;
    min-height: 584px;
    border-radius: 4px;
@@ -700,8 +700,11 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     color: #2e2f42;
 }
+.modal-form-field{
+    margin-bottom: 8px;
+}
 .modal-form-field:not(:last-child){
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 .modal-form-label{
     display: block;
@@ -771,7 +774,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-agreement{
-   margin-bottom: 8px; 
+   margin-bottom: 24px; 
 }
 .agreement-wrapper{
     line-height: 1.17;
