--- a/css/styles.css
+++ b/css/styles.css
@@ -700,12 +700,14 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     color: #2e2f42;
 }
-.modal-form-field{
-    margin-bottom: 8px;
-}
+
 .modal-form-field:not(:last-child){
     margin-bottom: 8px;
 }
+.modal-form-com{
+    margin-bottom: 16px;
+}
+
 .modal-form-label{
     display: block;
     margin-bottom: 4px;
