--- a/css/styles.css
+++ b/css/styles.css
@@ -502,9 +502,8 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-icons-list{
     display: flex;
     justify-content: center;
-    margin-bottom: 16px;
     gap: 16px;
-    margin-top: 16px;
+   
 
 }
 .footer-icons-item{
@@ -532,16 +531,8 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-container-footer{
-    display: block;
-    justify-content: center;
-    align-items: center;
-    width: 453px;
-    height: 80px;
-    margin-left:auto;
-    box-sizing: border-box;
-    border: #4d5ae5;
-    
-    
+    margin-left: auto;
+ 
 }
 .footer-form{
     display: flex;
@@ -563,6 +554,7 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-input{
+    outline: transparent;
     border: 1px solid #fff;
     border-radius: 4px;
     width: 264px;
@@ -574,16 +566,16 @@ transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
     color: #ffffff;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.placeholder{
+.footer-input::placeholder{
     color:#ffffff;
 }
-.footer-input:focus,
-.footer-input:hover{
-    border-color: #404bbf;
-}
 
+
+.footer-input:focus{
+   border-color: #4d5ae5;
+}
 .footer-btn{
     display: flex;
     justify-content: center;
